src/main/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-quarkus
  namespace: philipp-ci
spec:
  type: ClusterIP
  selector:
    app: api-quarkus
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
