src/main/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-api-quarkus
  namespace: philipp-ci
spec:
  tls:
    termination: Edge
  path: /
  to:
    kind: Service
    name: todo-api-quarkus
  port:
    targetPort: http
  wildcardPolicy: None
